# sahidawa-india

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  onboarding.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  claim_issue.yml  custom_issue.yml  documentation_issue.yml  feature_request.yml  language_translation.yml  performance_issue.yml  question_help.yml  ui_ux_suggestion.yml
.github/scripts/: manage-labels.mjs
.github/workflows/: auto-assign.yml  close-conflicting-prs.yml  codeql.yml  devtrack.yml  enforce-assignment.yml  keep-alive.yml  labeler.yml  linkedin-shoutout.yml  pr-quality-check.yml  pr-size-checker.yml  pr-spam-guard.yml  release-drafter.yml  strict-pr-file-checker.yml  sync-labels.yml  test.yml  welcome-onboarding.yml
apps/api/: jest.config.js  package.json  tsconfig.json
apps/etl/: README.md  pyproject.toml  run_all.py
apps/etl/src/: __init__.py
apps/etl/src/loaders/: __init__.py  supabase_loader.py
apps/etl/src/sahidawa_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/etl/src/scrapers/: __init__.py  cdsco.py  jan_aushadhi.py
apps/etl/src/utils/: __init__.py  logger.py
apps/etl/src/validators/: __init__.py  cdsco_validator.py
apps/etl/tests/: __init__.py  test_loader.py
data/: .gitignore  logger.py  normalization.py  requirements.txt  validate_cdsco.py
docs/: SETUP_ML.md  api-reference.md  etl-pipeline.md
scripts/: linkedin_shoutout.py
supabase/: schema-target.json
(+348 files in other folders)
