[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sahidawa-etl"
version = "0.1.0"
description = "Unified ETL pipelines for SahiDawa — Jan Aushadhi scraper, CDSCO validator, Supabase loader"
requires-python = ">=3.10"
dependencies = [
    # Scraping
    "playwright>=1.49.0",
    "requests>=2.32.0",
    # Data processing
    "pandas>=2.2.0",
    "rapidfuzz>=3.0.0",
    # Database
    "supabase>=2.10.0",
    # Config
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
